Implement initial updates for Page Tests

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -8,9 +8,9 @@
   {% set css %}
     {% include "assets/css/inline.css" %}
   {% endset %}
-  <style>{{ css | cssmin | safe }}</style>
+  <style>{{ css | safe }}</style>
   {% set js %}
     {% include "assets/js/inline.js" %}
   {% endset %}
-  <script>{{ js | jsmin | safe }}</script>
+  <script>{{ js | safe }}</script>
 </head>
