--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,12 +5,12 @@
 
 	<body>
 
-		<header>
+		{# <header>
 			<em>
 				<a href="{{ '/' | url }}">{{ metadata.title }}</a>
 			</em>
-			{# {% include "components/nav.njk" %} #}
-		</header>
+			{% include "components/nav.njk" %}
+		</header> #}
 
 		<main>
 			{{ layoutContent | safe }}
